# Piccolo-rs

./: .gitignore  Cargo.toml  README.md  arg  build.rs  imgui.ini  log.txt
_bin/: model.rs  triangle.rs
runtime/: Cargo.toml  build.rs
runtime/src/: app.rs  core.rs  engine.rs  function.rs  lib.rs  resource.rs
runtime/src/core/: math.rs
runtime/src/core/algorithm/: noise.rs
runtime/src/core/math/: axis_aligned.rs  bounding_box.rs  math.rs  matrix3.rs  matrix4.rs  quaternion.rs  transform.rs  vector2.rs  vector3.rs  vector4.rs
runtime/src/core/meta/reflection/: Cargo.toml
runtime/src/function/: framework.rs  input.rs  render.rs  ui.rs
runtime/src/function/framework/: component.rs  minecraft.rs  object.rs  world.rs
runtime/src/function/framework/component/: camera_component.rs  character_component.rs  component.rs  mesh.rs  motor_component.rs  transform_component.rs
runtime/src/function/framework/level/: level.rs
runtime/src/function/framework/minecraft/: block.rs  block_res.rs  chunk.rs  world.rs
runtime/src/function/framework/object/: object.rs  object_id_allocator.rs
runtime/src/function/framework/resource/: component.rs  resource.rs
runtime/src/function/global/: global_context.rs
runtime/src/function/input/: game_command_system.rs  input_system.rs
runtime/src/function/render/: debugdraw.rs  font_atlas.rs  graph_compiler.rs  interface.rs  light.rs  passes.rs  render_camera.rs  render_common.rs  render_entity.rs  render_graph.rs  render_guid_allocator.rs  render_helper.rs  render_mesh.rs  render_object.rs  render_pass.rs  render_pass_base.rs  render_pipeline.rs  render_pipeline_base.rs  render_resource.rs  render_resource_base.rs  render_scene.rs  render_swap_context.rs  render_system.rs  render_type.rs  window_system.rs
runtime/src/function/ui/: ui2.rs  window_ui.rs
runtime/src/resource/: asset_manager.rs  config_manager.rs  res_type.rs
runtime/src/resource/res_type/: common.rs  data.rs  global.rs
runtime/src/shader/glsl/: combine_ui.frag  constants.h  debugdraw.frag  fxaa.vert  gbuffer.h  mesh.vert  mesh_gbuffer.frag  mesh_inefficient_pick.vert  post_process.vert  tone_mapping.frag  ui.vert
(+214 files in other folders)
