[package]
name = "musilk-rust-vulkan-minecraft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
nalgebra-glm = "0.20.0"
png = "0.18.0"
pretty_env_logger = "0.5.0"
thiserror = "2.0.16"
tobj = {version = "4.0.3", features = ["log"]}
vulkanalia = {version = "0.29.0", features = ["libloading", "provisional", "window"]}
winit = "0.30"
