[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
reflection = {path = "src/core/meta/reflection"}
ab_glyph = "0.2.32"
anyhow = "1.0.99"
bitflags = "2.9.4"
itertools = "0.14.0"
linkme = "0.3.35"
log = "0.4.27"
nalgebra-glm = "0.20.0"
pretty_env_logger = "0.5.0"
thiserror = "2.0.16"
tobj = {version = "4.0.3", features = ["log"]}
vulkanalia = {version = "0.29.0", features = ["libloading", "provisional", "window"]}
winit = "0.30"
image = "0.25.8"

[lib]
path = "src/lib.rs"
