[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.99"
bitflags = "2.9.4"
itertools = "0.14.0"
linkme = "0.3.35"
log = "0.4.27"
pretty_env_logger = "0.5.0"
thiserror = "2.0.16"
tobj = {version = "4.0.3", features = ["log"]}
vulkanalia = {version = "0.33.0", features = ["libloading", "provisional", "window"]}
winit = "0.30"
image = "0.25.8"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
typetag = "0.2.21"
bytemuck = {version = "1.24.0", features = ["derive"]}
rand = "0.9.2"

[lib]
path = "src/lib.rs"
